IMPORTANT - Major database and memory bug fix ISSUE - the way the database is accesed in runtime - added a function to save users and emails that are in memory to be saved in the databases on a server shutdown - added a funtion to load users and emails that are in the databases on a server startup - fixed the filedatabasetestunit and validated it - updated the markdown documentation