@@ -1,6 +1,8 @@
 # FileDatabase Test Documentation
 
-This section describes the unit tests for the `FileDatabase.java` class. These tests verify core persistence functionality for user and email data using flat-file storage and GSON for JSON serialization.
+This document outlines the unit tests for the `FileDatabase.java` class. These tests verify that user and email data are correctly loaded into memory on server startup and saved to disk on shutdown, in compliance with CA2's memory-only runtime requirement.
+
+---
 
 ## Testing Framework
 
@@ -14,11 +16,11 @@ All tests are written using **JUnit 5 (Jupiter)**.
 
 ### Assertions
 
-JUnit's `Assertions` class is used to validate expected behavior:
+JUnit’s `Assertions` API is used to verify behavior:
 
-- `assertTrue` / `assertFalse` — Verifies boolean conditions.
-- `assertEquals` — Checks value equality.
-- `assertNotNull` — Ensures a value is not `null`.
+- `assertTrue` / `assertFalse` — Check boolean conditions.
+- `assertEquals` — Confirm expected value equality.
+- `assertNotNull` — Ensure a value is not `null`.
 
 All assertions are imported from:
 
@@ -26,43 +28,46 @@ All assertions are imported from:
 import static org.junit.jupiter.api.Assertions.*;
 ```
 
+---
+
 ## Test Environment Setup
 
-Each test uses a temporary `.db` file located in `src/test/resources`:
+Each test uses temporary `.db` files created in `src/test/resources`:
+
 - `test_users.db`
 - `test_emails.db`
 
-These files are created and cleaned up before and after each test. The constructor for `FileDatabase` accepts custom file paths to support test isolation and reproducibility.
+These files are created and cleaned up using `@BeforeEach` and `@AfterEach` to ensure test isolation. The `FileDatabase` constructor accepts these paths, and `loadAll()` is invoked to preload the in-memory state. No file access occurs during test execution.
+
+---
 
 ## Email Tests
 
-### testSaveAndLoadEmail
+### `testSaveAndRetrieveEmailFromMemory`
 
-This unit test verifies that the `FileDatabase` class can correctly persist an `Email` object to disk and read it back without data loss.
+This test verifies that an email saved using `saveEmail(...)` is stored in memory and retrievable with `getEmailsForUser(...)`.
 
-**What It Verifies:**
-- Emails can be written to a flat file (`test_emails.db`) using GSON serialization.
-- The file content is correctly deserialized into Java objects.
-- No data is lost or altered during the write/read cycle.
-- All fields (`id`, `to`, `from`, `subject`, `body`, `timestamp`, `visible`, `edited`) match exactly between the original and retrieved objects.
+#### What It Verifies
 
-**Why It Matters:**
-Reliable persistence is crucial to ensure users don't lose emails and that data integrity is preserved across sessions. This test isolates and validates that mechanism.
+- Email objects are held in memory (not written during runtime).
+- Retrieval correctly matches recipient address.
+- All fields are preserved between save and lookup.
 
-**Test Logic Summary:**
-1. Set up clean temp databases for isolation.
-2. Construct a full `Email` object.
-3. Save it to file using `saveEmail(...)`.
-4. Confirm file contains serialized data.
-5. Load the data using `loadAllEmails()`.
-6. Compare field-by-field to ensure equality.
-7. Clean up test files.
+#### Why It Matters
 
-**Excerpt:** ```src\test\java\server\data\FileDatabaseEmailTest.java```
+Email delivery and inbox functionality rely on accurate and accessible in-memory email storage.
 
+#### Test Logic Summary
+
+1. Prepare test `.db` files.
+2. Create a complete `Email` object.
+3. Save to memory using `saveEmail(...)`.
+4. Retrieve using `getEmailsForUser(...)`.
+5. Assert all expected values match.
+
+#### Code Excerpt
 
 ```java
-// Email creation and persistence
 Email email = new Email();
 email.setId(UUID.randomUUID().toString());
 email.setTo("recipient@example.com");
@@ -76,139 +81,55 @@ email.setEdited(false);
 boolean saved = fileDatabase.saveEmail(email);
 assertTrue(saved, "Email should be saved successfully");
 
-// Verification
-List<Email> loaded = fileDatabase.loadAllEmails();
-assertEquals(1, loaded.size(), "One email should be loaded");
+List<Email> loaded = fileDatabase.getEmailsForUser("recipient@example.com", "received");
+assertEquals(1, loaded.size(), "One email should be retrieved");
 
 Email loadedEmail = loaded.get(0);
-assertEquals(email.getId(), loadedEmail.getId());
+assertEquals(email.getSubject(), loadedEmail.getSubject());
 ```
+
+---
 
 ## User Tests
 
-### testSaveAndRetrieveUser
+### `testSaveAndRetrieveUser`
 
-This test ensures that a new `User` can be saved to the file system and retrieved accurately using their email address.
+This test ensures that a user added to memory using `saveUser(...)` can be looked up via their email address.
 
-**What It Verifies:**
-- A `User` object can be stored in the flat file `test_users.db` using JSON.
-- The same user can be looked up by their email address using `getUser(...)`.
-- All user data remains intact after deserialization.
+#### What It Verifies
 
-**Why It Matters:**
-This test guarantees the system can persist user credentials and recover them for login or session handling, which is essential for authentication functionality.
+- The user is only saved in memory.
+- Retrieval works using the `getUser(...)` method.
+- Field values remain consistent after saving.
 
-**Test Logic Summary:**
-1. Set up temporary database files.
-2. Create a `User` object with email and hashed password.
-3. Save the user using `saveUser(...)` and assert success.
-4. Retrieve the user with `getUser(...)` by email.
-5. Assert that the result is not null and matches input data.
+#### Why It Matters
 
-**Excerpt:** ```src\test\java\server\data\FileDatabaseUserTest.java```
+Authentication and login functionality depend on the correct handling of user credentials in memory.
+
+#### Test Logic Summary
+
+1. Create a `User` with email and password.
+2. Save it using `saveUser(...)`.
+3. Retrieve it using `getUser(...)`.
+4. Assert values match expectations.
+
+#### Code Excerpt
+
 ```java
 User user = new User("test@example.com", "hashedpassword123");
+
 boolean saved = fileDatabase.saveUser(user);
-assertTrue(saved, "User should be saved successfully");
+assertTrue(saved, "User should be saved");
 
 User retrieved = fileDatabase.getUser("test@example.com");
 assertNotNull(retrieved, "User should be found");
 assertEquals("test@example.com", retrieved.getEmail());
-assertEquals("hashedpassword123", retrieved.getPasswordHash());
+assertEquals("hashedpassword123", retrieved.getPassword());
 ```
-## logs output sample
-```
-PS C:\Users\Raphael\Documents\Java\EmailSystem> mvn test
-WARNING: A restricted method in java.lang.System has been called
-WARNING: java.lang.System::load has been called by org.fusesource.jansi.internal.JansiLoader in an unnamed module (file:/C:/ProgramData/chocolatey/lib/maven/apache-maven-3.9.9/lib/jansi-2.4.1.jar)
-WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
-WARNING: Restricted methods will be blocked in a future release unless native access is enabled
 
-WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
-WARNING: sun.misc.Unsafe::objectFieldOffset has been called by com.google.common.util.concurrent.AbstractFuture$UnsafeAtomicHelper (file:/C:/ProgramData/chocolatey/lib/maven/apache-maven-3.9.9/lib/guava-33.2.1-jre.jar)
-WARNING: Please consider reporting this to the maintainers of class com.google.common.util.concurrent.AbstractFuture$UnsafeAtomicHelper
-WARNING: sun.misc.Unsafe::objectFieldOffset will be removed in a future release
-[INFO] Scanning for projects...
-[INFO] 
-[INFO] --------------------< com.emailsystem:email-system >--------------------
-[INFO] Building email-system 1.0-SNAPSHOT
-[INFO]   from pom.xml
-[INFO] --------------------------------[ jar ]---------------------------------
-[INFO] 
-[INFO] --- resources:3.3.1:resources (default-resources) @ email-system ---
-[INFO] skip non existing resourceDirectory C:\Users\Raphael\Documents\Java\EmailSystem\src\main\resources
-[INFO]
-[INFO] --- compiler:3.13.0:compile (default-compile) @ email-system ---
-[INFO] Recompiling the module because of changed source code.
-[INFO] Compiling 14 source files with javac [debug target 24] to target\classes
-[INFO] 
-[INFO] --- resources:3.3.1:testResources (default-testResources) @ email-system ---
-[INFO] Copying 0 resource from src\test\resources to target\test-classes
-[INFO]
-[INFO] --- compiler:3.13.0:testCompile (default-testCompile) @ email-system ---
-[INFO] Recompiling the module because of changed dependency.
-[INFO] Compiling 2 source files with javac [debug target 24] to target\test-classes
-[INFO] 
-[INFO] --- surefire:3.0.0-M9:test (default-test) @ email-system ---
-[INFO] Using auto detected provider org.apache.maven.surefire.junitplatform.JUnitPlatformProvider
-[INFO] 
-[INFO] -------------------------------------------------------
-[INFO]  T E S T S
-[INFO] -------------------------------------------------------
-[INFO] Running server.data.FileDatabaseEmailTest
-? Test DBs prepared:
-- C:\Users\Raphael\Documents\Java\EmailSystem\src\test\resources\test_emails.db
-- C:\Users\Raphael\Documents\Java\EmailSystem\src\test\resources\test_users.db
-? Email DB content after save:
-{"id":"3b5337de-c7eb-4045-8543-2e3842f88487","to":"recipient@example.com","from":"sender@example.com","subject":"Hello","body":"Message content here","timestamp":"2025-04-10T14:00:00Z","visible":true,"edited":false}
-? Cleaned up test DB files.
-[INFO] Tests run: 1, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 0.155 s - in server.data.FileDatabaseEmailTest
-[INFO] Running server.data.FileDatabaseUserTest
-[INFO] Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 0.018 s - in server.data.FileDatabaseUserTest
-[INFO]
-[INFO] Results:
-[INFO]
-[INFO] Tests run: 3, Failures: 0, Errors: 0, Skipped: 0
-[INFO]
-[INFO] ------------------------------------------------------------------------
-[INFO] Tests run: 2, Failures: 0, Errors: 0, Skipped: 0, Time elapsed: 0.018 s - in server.data.FileDatabaseUserTest
-[INFO]
-[INFO] Results:
-[INFO]
-[INFO] Tests run: 3, Failures: 0, Errors: 0, Skipped: 0
-[INFO]
-[INFO] ------------------------------------------------------------------------
-[INFO] Results:
-[INFO]
-[INFO] Tests run: 3, Failures: 0, Errors: 0, Skipped: 0
-[INFO]
-[INFO] ------------------------------------------------------------------------
-[INFO]
-[INFO] Tests run: 3, Failures: 0, Errors: 0, Skipped: 0
-[INFO]
-[INFO] ------------------------------------------------------------------------
-[INFO] BUILD SUCCESS
-[INFO] Tests run: 3, Failures: 0, Errors: 0, Skipped: 0
-[INFO]
-[INFO] ------------------------------------------------------------------------
-[INFO] BUILD SUCCESS
-[INFO] ------------------------------------------------------------------------
-[INFO] ------------------------------------------------------------------------
-[INFO] BUILD SUCCESS
-[INFO] ------------------------------------------------------------------------
-[INFO] Total time:  2.469 s
-[INFO] BUILD SUCCESS
-[INFO] ------------------------------------------------------------------------
-[INFO] Total time:  2.469 s
-[INFO] Finished at: 2025-04-16T13:36:26+02:00
-[INFO] ------------------------------------------------------------------------
-[INFO] Total time:  2.469 s
-[INFO] Finished at: 2025-04-16T13:36:26+02:00
-[INFO] Total time:  2.469 s
-[INFO] Finished at: 2025-04-16T13:36:26+02:00
-[INFO] Finished at: 2025-04-16T13:36:26+02:00
-[INFO] ------------------------------------------------------------------------
-PS C:\Users\Raphael\Documents\Java\EmailSystem>
+---
 
+## Summary
 
-```
+These tests ensure that the `FileDatabase` class complies with the CA2 requirement to operate fully in memory during runtime. Data is loaded from disk at startup and saved only at shutdown, with no runtime file access permitted. Each test validates the correctness of core operations related to user and email state management.
+
